2004-02-23  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/sp-item.h, src/sp-item.cpp (sp_item_bbox_desktop):
	Add NR::Rect version.

	* src/inkview.cpp: Address compiler warning: declare is_jar iff it is
	defined, i.e. #ifdef WITH_INKJAR.

	* src/desktop-affine.cpp, src/knotholder.cpp,
	src/desktop-events.cpp, src/nodepath.cpp, src/sp-ellipse.cpp,
	src/sp-image.cpp, src/sp-item-notify-moveto.cpp, src/sp-rect.cpp,
	src/text-context.cpp:
	#include libnr/nr-matrix-ops.h.

2004-02-22  Ted Gould <ted@gould.cx>

	* doc/Makefile.am, po/POTFILES.in: keeping these up to date
	for distchecks.

2004-02-21  Ted Gould <ted@gould.cx>

	* extensions/txt2svg.inkmod, extensions/txt2svg.pl:
	Adding a script that Bryce wrote that will take in text.  Plus
	the inkscape module file to make it so that you can open text
	files in Inkscape.

2004-02-21  MenTaLguY <mental@rydia.net>

	* src/xml/repr-util.cpp, src/xml/repr.h: added RDF namespace by default

	* src/inkscape.cpp, src/inkscape.h, src/widgets/sp-widget.cpp,
	  src/inkview.cpp: nuked global 'inkscape' variable and replaced
	  it with a module-local variable and an accessor function.

	* src/uri.h, src/uri.c: added native filename to/from thingy

2004-02-20  bulia byak <bulia@users.sourceforge.net>

	* src/text-context.cpp: [shift+]alt+arrows to kern

	* src/sp-text.cpp,h: Complete support for dx/dy vectors, including inheritance
	as per SVG spec. Preserve dx/dy lists in editing. Function to adjust dx/dy by
	screen pixels.

	* src/svg/svg-length.cpp: Function to read length in absolute units
	only. Function to read a length into a float instead of SPSVGLength. Function
	to read a length vector into a list of SPSVGLength's.

	* src/sp-root.cpp src/sp-image.cpp src/sp-offset.cpp src/sp-spiral.cpp:
	Eliminated sp_svg_length_read_ldd calls and ugly repetitive unit checks, used
	sp_svg_length_read_[computed_]absolute instead.

	* doc/keys.xml doc/keys.html icons/keys.svg: Updated guide and grid